--- a/template.conf.d/template.conf
+++ b/template.conf.d/template.conf
@@ -1,11 +1,38 @@
-[client1]
-source_user         : someuser
-source_key          : /home/someuser/.ssh/someuser
-source_host         : 192.168.1.2
-source_dir          : /chroot/someuser/in
-destination_user    : someuser
-destination_key     : /home/someuser/.ssh/someuser
-destination_host    : 172.16.1.2
-destination_dir     : /chroot/someuser/out
-log_filename        : client1.log.%yyyy-%mm-%dd
-log_format          : %yyyy-%mm-%dd: %S
+##################################################
+#                                                #
+# Template client profile. Updated by KT         #
+# --------------------------------------         #
+#                                                #
+# N.B.                                           #
+# 1.) Under client_name attribute, all space     #
+#     will be replaced with '_'.                 #
+#                                                #
+# 2.) All leading and trailing space are         #
+#     trimmed.                                   #
+#                                                #
+# 3.) Do not introduce space to the rest of      #
+#     attributes                                 #
+#                                                #
+# client_attribute_name : client_attribute       #
+# client_name           : needed                 #
+# source_user           : needed                 #
+# source_key            : optional               #
+# source_host           : needed                 #
+# source_dir            : needed                 #
+# destination_user      : needed                 #
+# destination_key       : optional               #
+# destination_host      : needed                 #
+# destination_dir       : needed                 #
+# log_filename          : optional               #
+#                                                #
+##################################################
+[Template client]
+client_name             : Template client
+source_user             : someuser
+source_key              : /home/someuser/.ssh/someuser
+source_host             : 192.168.1.444
+source_dir              : /chroot/someuser/in
+destination_user        : someuser
+destination_key         : /home/someuser/.ssh/someuser
+destination_host        : 172.16.1.444
+destination_dir         : /chroot/someuser/out
