Updated the file with dd test commands

--- a/template.conf.d/client1.conf
+++ b/template.conf.d/client1.conf
@@ -27,11 +27,11 @@
 #                                                #
 ##################################################
 [Client 1]
-client_name             : Client 1
+client_name             : Client_1
 source_user             : mensa
+source_host             : 192.168.1.222
 source_key              : /home/mensa/.ssh/mensa2
-source_host             : 192.168.1.111
-source_dir              : /home/mensa/lv1
+source_dir              : /home/mensa/lv0/lv1
 destination_user        : someuser
 destination_key         : /home/mensa/.ssh/mensa2
 destination_host        : 172.16.1.111
