--- a/template.conf.d/template.conf
+++ b/template.conf.d/template.conf
@@ -28,11 +28,11 @@
 ##################################################
 [Template client]
 client_name             : Template client
-source_user             : someuser
+source_user             : mensa
 source_key              : /home/someuser/.ssh/someuser
 source_host             : 192.168.1.444
-source_dir              : /chroot/someuser/in
+source_dir              : /home/mensa/lv0/lvt
 destination_user        : someuser
 destination_key         : /home/someuser/.ssh/someuser
 destination_host        : 172.16.1.444
-destination_dir         : /chroot/someuser/out
+destination_dir         : /home/mensa/lv6
