--- a/template.conf.d/client3.conf
+++ b/template.conf.d/client3.conf
@@ -27,11 +27,11 @@
 #                                                #
 ##################################################
 [Client 3]
-client_name             : Client 3
+client_name             : Client_3
 source_user             : mensa
-source_key              : /home/mensa/.ssh/mensa2
 source_host             : 192.168.1.333
-source_dir              : /home/mensa/lv1
+source_key              : /home/mensa/.ssh/mensa2
+source_dir              : /home/mensa/lv0/lv3
 destination_user        : someuser
 destination_key         : /home/mensa/.ssh/mensa2
 destination_host        : 172.16.1.333
