Updated the file with dd test commands

--- a/template.conf.d/client1.conf
+++ b/template.conf.d/client1.conf
@@ -27,7 +27,7 @@
 #                                                #
 ##################################################
 [Client 1]
-client_name             : Client_1
+client_name             : Client 1
 source_user             : mensa
 source_host             : 192.168.1.222
 source_key              : /home/mensa/.ssh/mensa2
