--- a/template.conf.d/client2.conf
+++ b/template.conf.d/client2.conf
@@ -27,7 +27,7 @@
 #                                                #
 ##################################################
 [Client 2]
-client_name             : Client_2
+client_name             : Client 2
 source_user             : mensa
 source_host             : 192.168.1.222
 source_key              : /home/mensa/.ssh/mensa2
