--- a/template.conf.d/client3.conf
+++ b/template.conf.d/client3.conf
@@ -27,7 +27,7 @@
 #                                                #
 ##################################################
 [Client 3]
-client_name             : Client_3
+client_name             : Client 3
 source_user             : mensa
 source_host             : 192.168.1.333
 source_key              : /home/mensa/.ssh/mensa2
