Updated the file with dd test commands

--- a/sftp_scripts/template.conf.d/client1.conf
+++ b/sftp_scripts/template.conf.d/client1.conf
@@ -13,26 +13,27 @@
 # 3.) Do not introduce space to the rest of      #
 #     attributes                                 #
 #                                                #
-# client_attribute_name : client_attribute       #
-# client_name           : needed                 #
-# source_user           : needed                 #
-# source_key            : optional               #
-# source_host           : needed                 #
-# source_dir            : needed                 #
-# destination_user      : needed                 #
-# destination_key       : optional               #
-# destination_host      : needed                 #
-# destination_dir       : needed                 #
-# log_filename          : optional               #
+# client_attribute_name = client_attribute       #
+# client_name           = needed                 #
+# source_user           = needed                 #
+# source_key            = optional               #
+# source_host           = needed                 #
+# source_dir            = needed                 #
+# destination_user      = needed                 #
+# destination_key       = optional               #
+# destination_host      = needed                 #
+# destination_dir       = needed                 #
+# log_filename          = optional               #
 #                                                #
 ##################################################
 [Client 1]
-client_name             : Client 1
-source_user             : mensa
-source_host             : 192.168.1.222
-source_key              : /home/mensa/.ssh/mensa2
-source_dir              : /home/mensa/lv0/lv1
-destination_user        : someuser
-destination_key         : /home/mensa/.ssh/mensa2
-destination_host        : 172.16.1.111
-destination_dir         : /home/mensa/lv6
+client_name             = Client 1
+source_user             = mensa
+source_host             = 192.168.1.222
+source_key              = /home/mensa/.ssh/mensa2
+source_dir              = /home/mensa/lv0/lv1
+destination_user        = someuser
+destination_key         = /home/mensa/.ssh/mensa2
+destination_host        = 172.16.1.111
+destination_dir         = /home/mensa/lv6
+mail_to                 = kaloong@localhost,kaloong2@localhost
