--- a/sftp_scripts/template.conf.d/template.conf
+++ b/sftp_scripts/template.conf.d/template.conf
@@ -13,26 +13,26 @@
 # 3.) Do not introduce space to the rest of      #
 #     attributes                                 #
 #                                                #
-# client_attribute_name : client_attribute       #
-# client_name           : needed                 #
-# source_user           : needed                 #
-# source_key            : optional               #
-# source_host           : needed                 #
-# source_dir            : needed                 #
-# destination_user      : needed                 #
-# destination_key       : optional               #
-# destination_host      : needed                 #
-# destination_dir       : needed                 #
-# log_filename          : optional               #
+# client_attribute_name = client_attribute       #
+# client_name           = needed                 #
+# source_user           = needed                 #
+# source_key            = optional               #
+# source_host           = needed                 #
+# source_dir            = needed                 #
+# destination_user      = needed                 #
+# destination_key       = optional               #
+# destination_host      = needed                 #
+# destination_dir       = needed                 #
+# log_filename          = optional               #
 #                                                #
 ##################################################
 [Template client]
-client_name             : Template client
-source_user             : mensa
-source_key              : /home/someuser/.ssh/someuser
-source_host             : 192.168.1.444
-source_dir              : /home/mensa/lv0/lvt
-destination_user        : someuser
-destination_key         : /home/someuser/.ssh/someuser
-destination_host        : 172.16.1.444
-destination_dir         : /home/mensa/lv6
+client_name             = Template client
+source_user             = mensa
+source_key              = /home/someuser/.ssh/someuser
+source_host             = 192.168.1.444
+source_dir              = /home/mensa/lv0/lvt
+destination_user        = someuser
+destination_key         = /home/someuser/.ssh/someuser
+destination_host        = 172.16.1.444
+destination_dir         = /home/mensa/lv6
